--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    ],
    "source": [
     "def mysum(L):\n",
-    "    if not L:\n",
+    "    if not L: # caso para parar la funcion\n",
     "        return 0\n",
     "    else:\n",
     "        return L[0] + mysum(L[1:])\n",
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
